Changes for 3.3.0

New features:
...G...... [ZBXNEXT-12] added support of CIDR subnet mask notations for Server option on agent config (vso)
A.F....PS. [ZBXNEXT-12] added support of CIDR subnet mask notations for Allowed hosts of trapper items (Sasha, vso)
A.F....PS. [ZBXNEXT-3576] increased user media periods and item flexible intervals to 1024 characters (Sasha, wiper)
A......... [ZBX-3783] added support of user_medias parameter by user.update() method (Sasha)
A......... [ZBX-3783] prohibited deleting users and user groups which are used in actions (Sasha)
A......... [ZBX-3783] deprecated user.addmedia(), user.updatemedia(), user.deletemedia(), user.updateprofile(), usergroup.massadd(), usergroup.massupdate() and usermedia.get() API methods (Sasha)
.......PS. [ZBXNEXT-1804] reduced the number of connections required for proxy-server data exchange by adding new 'proxy data' request and increasing the size of data sent (wiper)
........S. [ZBXNEXT-3086] improved performance of action condition evaluation by ensuring that equivalent conditions are only checked once, thus there will be less queries to database (vso)
A.F....... [ZBXNEXT-3570] removed the deprecated "isReadable" and "isWritable" methods as well as the "proxy.interfaces" parameter (Sasha)
..F.....S. [ZBXNEXT-1667] added support of LLD macros in function parameters of trigger prototype expression (Ivo, vso)
........S. [ZBXNEXT-1667] added support of LLD macros in function parameters when using function with ITEM.VALUE, ITEM.LASTVALUE in trigger prototype name, description and tags (vso)
........S. [ZBXNEXT-1667] added support of LLD macros in function parameters of graph prototype name simple macros like {host:key[].func()} (vso)
..F....... [ZBXNEXT-707] implemented full clone functionality for all types of screens (Cemeris)
..F....PS. [ZBXNEXT-2970] increased maximum supported SNMP trapper file size (vso)